--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -28,17 +28,19 @@ jobs:
       with:
         fetch-depth: 1
     - run: echo "autoformat=false" > ~/.scalariform.conf
-    - run: mkdir -p target/universal/stage && cp LICENSE COPYING.md README.md target/universal/stage/ && git log -n 1 --pretty=oneline > target/universal/stage/commit.txt
     - uses: actions/cache@v1
       with:
         path: ~/.ivy2/cache
-        key: ${{ runner.os }}-ivy2
-    - uses: olafurpg/setup-scala@49fc8c734ef6916b4e1da8ba8d81bb26a2b46a06
+        key: ${{ runner.os }}-20200213-ivy2
+    - uses: olafurpg/setup-scala@3ffac5c02d0fcd802a5fb478326ccbc8eac2af73
       with:
         java-version: openjdk@1.13
-    - run: ./lila test stage
+    - run: ./lila test
+    - run: ./lila dist
+    - run: unzip target/universal/lila-3.0.zip
+    - run: cp LICENSE COPYING.md README.md lila-3.0 && git log -n 1 --pretty=oneline > lila-3.0/commit.txt
     - run: du -d2 -h ~
     - uses: actions/upload-artifact@v1
       with:
         name: lila-server
-        path: target/universal/stage
+        path: lila-3.0
