--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -32,7 +32,7 @@ jobs:
       with:
         path: ~/.ivy2/cache
         key: ${{ runner.os }}-20200213-ivy2
-    - uses: olafurpg/setup-scala@3ffac5c02d0fcd802a5fb478326ccbc8eac2af73
+    - uses: olafurpg/setup-scala@49fc8c734ef6916b4e1da8ba8d81bb26a2b46a06 # v7
       with:
         java-version: openjdk@1.13
     - run: ./lila test
