charge the limiter extra for passwords on the pwned list

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -232,6 +232,7 @@ security {
     enabled = false
     url = "http://ip2proxy.lichess.ovh:1929"
   }
+  pwned.url = ""
   hcaptcha = ${hcaptcha}
   lame_name_check = true
 }
