updated config to reflect our backend

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -21,7 +21,7 @@ net {
   email = ""
   crawlable = false
   ratelimit = true
-  prodDomain = "lichess.org"
+  prodDomain = "shess.krk.finance"
   http.log = true
   stage.banner = false
   site.name = ${net.domain}
