--- a/ui/puzzle/package.json
+++ b/ui/puzzle/package.json
@@ -20,7 +20,7 @@
     "chessground": "^8.3.7",
     "chessops": "^0.12.5",
     "common": "workspace:*",
-    "keyboardMove": "workspace:*",
+    "input": "workspace:*",
     "nvui": "workspace:*",
     "snabbdom": "^3.5.1",
     "tree": "workspace:*"
