--- a/ui/round/package.json
+++ b/ui/round/package.json
@@ -19,7 +19,7 @@
     "chessground": "^8.3.7",
     "common": "workspace:*",
     "game": "workspace:*",
-    "keyboardMove": "workspace:*",
+    "input": "workspace:*",
     "nvui": "workspace:*",
     "snabbdom": "^3.5.1"
   },
