--- a/ui/round/tsconfig.json
+++ b/ui/round/tsconfig.json
@@ -7,7 +7,7 @@
     { "path": "../chess/tsconfig.json" },
     { "path": "../common/tsconfig.json" },
     { "path": "../game/tsconfig.json" },
-    { "path": "../keyboardMove/tsconfig.json" },
+    { "path": "../input/tsconfig.json" },
     { "path": "../nvui/tsconfig.json" }
   ]
 }
