--- a/ui/input/package.json
+++ b/ui/input/package.json
@@ -26,17 +26,11 @@
   "scripts": {
     "compile": "tsc",
     "dev": "tsc",
-    "post": "cp dist/voskProcessor.js ../../public/compiled"
+    "post": "cp dist/plugins/voskWorklet.js ../../public/compiled"
   },
   "lichess": {
-    "copy": [
-      {
-        "src": "node_modules/vosk-browser/dist/vosk.js",
-        "dest": "../../public/vendor/vosk"
-      }
-    ],
     "bundles": {
-      "src/plugins/voiceInput.ts": "voiceInput"
+      "src/plugins/vosk.ts": "vosk"
     }
   }
 }
