framework for progress, local model caching

--- a/ui/input/package.json
+++ b/ui/input/package.json
@@ -30,7 +30,7 @@
   },
   "lichess": {
     "bundles": {
-      "src/plugins/vosk.ts": "vosk"
+      "src/plugins/vosk.ts": "input.vosk"
     }
   }
 }
