--- a/ui/input/@build/package.json
+++ b/ui/input/@build/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "make-lexicon",
+  "name": "make-grammar",
   "version": "1.0.0",
   "description": "",
-  "main": "makeLexicon.js",
+  "main": "makeGrammar.js",
   "type": "commonjs",
   "scripts": {
-    "dev": "tsc && node dist/makeLexicon.js"
+    "dev": "tsc && node dist/makeGrammar.js"
   },
   "dependencies": {
     "@types/node": "^18.11.17"
