--- a/ui/input/@build/package.json
+++ b/ui/input/@build/package.json
@@ -2,13 +2,13 @@
   "name": "make-grammar",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": ">=18"
+  },
   "main": "makeGrammar.js",
   "type": "commonjs",
   "scripts": {
     "dev": "tsc && node dist/makeGrammar.js"
-  },
-  "dependencies": {
-    "@types/node": "^18.11.17"
   },
   "keywords": [],
   "author": "T-Bone Duplexus",
