--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "check-format": "prettier --check .",
     "lint": "eslint . --ext .ts",
     "lila-journal": "journalctl --user -fu lila -o cat",
-    "metals-log": "tail -F .metals/metals.log | rg -v '(Unmatched cancel notification|handleCancellation)' | cut -c 21-",
+    "metals-log": "tail -F .metals/metals.log | stdbuf -oL cut -c 21- | rg -v '(notification for request|handleCancellation)'",
     "serverlog": "pnpm lila-journal & pnpm metals-log",
     "multilog": "pnpm serverlog & ui/build -w"
   }
