refacterz and support interactive promotion

--- a/ui/racer/tsconfig.json
+++ b/ui/racer/tsconfig.json
@@ -6,8 +6,8 @@
   },
   "isolatedModules": true,
   "references": [
-    { "path": "../chess/tsconfig.json" },
     { "path": "../common/tsconfig.json" },
+    { "path": "../input/tsconfig.json" },
     { "path": "../puz/tsconfig.json" }
   ]
 }
