--- a/ui/analyse/package.json
+++ b/ui/analyse/package.json
@@ -30,6 +30,7 @@
     "common": "workspace:*",
     "debounce-promise": "^3.1.2",
     "game": "workspace:*",
+    "input": "workspace:*",
     "nvui": "workspace:*",
     "prop-types": "^15.8.1",
     "snabbdom": "^3.5.1",
