--- a/ui/input/package.json
+++ b/ui/input/package.json
@@ -4,8 +4,19 @@
   "private": true,
   "description": "lichess.org auxillary input move",
   "type": "module",
-  "module": "dist/main.js",
-  "types": "dist/main.d.ts",
+  "module": "main.js",
+  "types": "main.d.ts",
+  "exports": {
+    ".": "./dist/main.js",
+    "./*": "./dist/*.js"
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "dist/*"
+      ]
+    }
+  },
   "keywords": [
     "chess",
     "lichess"
@@ -25,8 +36,7 @@
   },
   "scripts": {
     "compile": "tsc",
-    "dev": "tsc",
-    "post": "cp dist/plugins/voskWorklet.js ../../public/compiled"
+    "dev": "tsc"
   },
   "lichess": {
     "bundles": {
