--- a/ui/input/tsconfig.json
+++ b/ui/input/tsconfig.json
@@ -1,15 +1,12 @@
 {
-  "extends": "../tsconfig.base.json",
+  "extends": "../tsconfig_module.base.json",
   "include": ["src"],
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "src",
-    "types": ["lichess", "web", "cash", "audioworklet"],
-    "declaration": true,
-    "noUnusedLocals": false,
-    "composite": true,
-    "skipLibCheck": true // web & audioworklet conflict
+    "types": ["lichess", "web", "cash"],
+    "composite": true
   },
   "isolatedModules": true,
-  "references": [{ "path": "../common/tsconfig.json" }]
+  "references": [{ "path": "../common/tsconfig.json" }, { "path": "../chess/tsconfig.json" }]
 }
