--- a/ui/storm/package.json
+++ b/ui/storm/package.json
@@ -14,10 +14,10 @@
   "dependencies": {
     "@types/cash": "workspace:*",
     "@types/lichess": "workspace:*",
-    "chess": "workspace:*",
     "chessground": "^8.3.7",
     "chessops": "^0.12.5",
     "common": "workspace:*",
+    "input": "workspace:*",
     "puz": "workspace:*",
     "snabbdom": "^3.5.1"
   },
