--- a/ui/racer/tsconfig.json
+++ b/ui/racer/tsconfig.json
@@ -7,7 +7,7 @@
   "isolatedModules": true,
   "references": [
     { "path": "../common/tsconfig.json" },
-    { "path": "../input/tsconfig.json" },
+    { "path": "../chess/tsconfig.json" },
     { "path": "../puz/tsconfig.json" }
   ]
 }
