--- a/ui/round/tsconfig.json
+++ b/ui/round/tsconfig.json
@@ -4,9 +4,10 @@
   "isolatedModules": true,
   "references": [
     { "path": "../chat/tsconfig.json" },
+    { "path": "../chess/tsconfig.json"},
     { "path": "../common/tsconfig.json" },
     { "path": "../game/tsconfig.json" },
-    { "path": "../input/tsconfig.json" },
+    { "path": "../voice/tsconfig.json" },
     { "path": "../nvui/tsconfig.json" }
   ]
 }
