--- a/ui/keyboardMove/package.json
+++ b/ui/keyboardMove/package.json
@@ -1,46 +1,35 @@
 {
-  "name": "input",
+  "name": "keyboardMove",
   "version": "1.0.0",
   "private": true,
-  "description": "lichess.org auxillary input move",
+  "description": "lichess.org keyboard move",
   "type": "module",
-  "module": "main.js",
-  "types": "main.d.ts",
-  "exports": {
-    ".": "./dist/main.js",
-    "./*": "./dist/*.js"
-  },
-  "typesVersions": {
-    "*": {
-      "*": [
-        "dist/*"
-      ]
-    }
-  },
+  "module": "dist/main.js",
+  "types": "dist/main.d.ts",
   "keywords": [
     "chess",
-    "lichess"
+    "lichess",
+    "keyboard"
   ],
   "author": "Thibault Duplessis",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "@jest/globals": "^29.3.1",
-    "@types/audioworklet": "^0.0.36",
     "@types/cash": "workspace:*",
     "@types/lichess": "workspace:*",
     "chess": "workspace:*",
     "chessground": "^8.3.7",
     "common": "workspace:*",
-    "snabbdom": "^3.5.1",
-    "vosk-browser": "^0.0.8"
+    "snabbdom": "^3.5.1"
   },
   "scripts": {
     "compile": "tsc",
-    "dev": "tsc"
+    "dev": "tsc",
+    "prod": "tsc"
   },
   "lichess": {
     "bundles": {
-      "src/plugins/vosk.ts": "input.vosk"
+      "src/plugins/keyboardMove.ts": "keyboardMove"
     }
   }
 }
