--- a/ui/racer/tsconfig.json
+++ b/ui/racer/tsconfig.json
@@ -6,6 +6,7 @@
   },
   "isolatedModules": true,
   "references": [
+    { "path": "../chess/tsconfig.json" },
     { "path": "../common/tsconfig.json" },
     { "path": "../chess/tsconfig.json" },
     { "path": "../puz/tsconfig.json" }
