--- a/ui/puzzle/tsconfig.json
+++ b/ui/puzzle/tsconfig.json
@@ -9,6 +9,7 @@
     { "path": "../ceval/tsconfig.json" },
     { "path": "../chess/tsconfig.json" },
     { "path": "../common/tsconfig.json" },
+    { "path": "../keyboardMove/tsconfig.json" },
     { "path": "../voice/tsconfig.json" },
     { "path": "../nvui/tsconfig.json" },
     { "path": "../tree/tsconfig.json" }
