--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 /ui/common/**/*.d.ts
 /ui/game/**/*.js
 /ui/game/**/*.d.ts
-/ui/input/@build/**/*.json
+/ui/voice/@build/**/*.json
 /ui/nvui/**/*.js
 /ui/nvui/**/*.d.ts
 /ui/puz/**/*.js
