--- a/ui/voice/package.json
+++ b/ui/voice/package.json
@@ -26,11 +26,17 @@
   "scripts": {
     "compile": "tsc",
     "dev": "tsc",
-    "post": "cp dist/plugins/voskWorklet.js ../../public/compiled"
+    "post-disabled": "cp dist/plugins/voskWorklet.js ../../public/compiled"
   },
   "lichess": {
     "bundles": {
       "src/plugins/vosk.ts": "input.vosk"
-    }
+    },
+    "copy": [
+      {
+        "src": "grammar",
+        "dest": "../../public"
+      }
+    ]
   }
 }
