fixes from ask-voice

--- a/ui/voice/package.json
+++ b/ui/voice/package.json
@@ -34,7 +34,7 @@
     "copy": [
       {
         "src": "grammar",
-        "dest": "../../public"
+        "dest": "../../public/compiled"
       }
     ]
   }
