--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ public/vendor/stockfish.wasm
 public/vendor/stockfish-nnue.wasm
 public/vendor/stockfish-mv.wasm
 public/vendor/stockfish.js
+public/vendor/vosk
 public/css/
 target
 data/
