--- a/.gitignore
+++ b/.gitignore
@@ -20,12 +20,14 @@ public/vendor/stockfish-nnue.wasm
 public/vendor/stockfish-mv.wasm
 public/vendor/stockfish.js
 public/vendor/vosk
+public/lifat
 public/css/
 target
 data/
 dist/
 node_modules/
 local/
+lifat/
 ui/common/**/*.js
 ui/common/**/*.d.ts
 ui/chess/**/*.js
