--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "2.8.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "xml2js": "0.4.23"
   },
   "scripts": {
     "format": "prettier --write .",
