--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "typescript": "^4.9.4"
   },
   "scripts": {
-    "format": "prettier --write .",
-    "check-format": "prettier --check .",
+    "format": "prettier --write . --loglevel warn",
+    "check-format": "prettier --check . --loglevel warn",
     "lint": "eslint . --ext .ts",
     "journal": "journalctl --user -fu lila -o cat",
     "metals": "tail -F .metals/metals.log | stdbuf -oL cut -c 21- | rg -v '(notification for request|handleCancellation)'",
