shim voiceMove to trim 30k off round.min.js

--- a/ui/voice/package.json
+++ b/ui/voice/package.json
@@ -29,7 +29,8 @@
   },
   "lichess": {
     "bundles": {
-      "src/plugins/vosk.ts": "input.vosk"
+      "src/plugins/vosk.ts": "voice.vosk",
+      "src/plugins/voiceMove.ts": "voice.move"
     },
     "copy": [
       {
