--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ project/metals.sbt
 project/project
 project/target
 public/compiled
+public/images/background/montage*
+public/images/background/gallery*
 public/vendor/highcharts-4.2.5
 public/vendor/hopscotch
 public/vendor/tagify
@@ -19,6 +21,7 @@ public/vendor/stockfish.wasm
 public/vendor/stockfish-nnue.wasm
 public/vendor/stockfish-mv.wasm
 public/vendor/stockfish.js
+public/vendor/vosk
 public/css/
 target
 data/
