--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,8 @@ public/vendor/stockfish.wasm
 public/vendor/stockfish-nnue.wasm
 public/vendor/stockfish-mv.wasm
 public/vendor/stockfish.js
-public/vendor/vosk
+public/lifat/background
+public/lifat/vosk
 public/css/
 target
 data/
