--- a/.gitignore
+++ b/.gitignore
@@ -19,15 +19,13 @@ public/vendor/stockfish.wasm
 public/vendor/stockfish-nnue.wasm
 public/vendor/stockfish-mv.wasm
 public/vendor/stockfish.js
-public/lifat/background
-public/lifat/vosk
+public/lifat
 public/css/
 target
 data/
 dist/
 node_modules/
 local/
-lifat/
 ui/common/**/*.js
 ui/common/**/*.d.ts
 ui/chess/**/*.js
