Dim claim threefold button and add tooltip to Swiss draws

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -349,7 +349,7 @@ tournament {
   pairing.delay = 3.1 seconds
 }
 swiss {
-  bbpairing = "/path/to/bbpPairings.exe" # compiled from https://github.com/cyanfish/bbpPairings
+  bbpairing = "/Users/sean/src/lichess/bbpPairings/bbpPairings.exe" # compiled from https://github.com/cyanfish/bbpPairings
 }
 simul {
   collection.simul = simul
