--- a/ui/build
+++ b/ui/build
@@ -14,7 +14,7 @@ ls -l node_modules node_modules/@* ui/node_modules ui/*/node_modules | grep /yar
 mkdir -p public/compiled
 
 apps1="common palantir"
-apps2="ceval game tree chat nvui puz"
+apps2="ceval game tree chat nvui puz keyboardMove"
 apps3="analyse site msg cli challenge notify learn editor puzzle round lobby tournament tournamentSchedule tournamentCalendar simul dasher speech serviceWorker storm"
 
 if [ $mode == "upgrade" ]; then
@@ -57,4 +57,11 @@ else
     echo "For faster builds, install GNU parallel."
     for app in $apps1 $apps2 $apps3; do (build $app); done
   fi
+fi
+
+if [ $target == "dev" ] && [ $mode != "css" ]; then
+  echo
+  echo "Building nvui plugins"
+  yarn workspace analyse run nvui
+  yarn workspace round run nvui
 fi
