add reference to 'tree' on 'tsconfig.json' of 'ceval'

--- a/ui/ceval/tsconfig.json
+++ b/ui/ceval/tsconfig.json
@@ -7,6 +7,6 @@
     "types": ["lichess", "web", "cash"],
     "composite": true
   },
-  "references": [{ "path": "../common/tsconfig.json" }],
+  "references": [{ "path": "../common/tsconfig.json" }, { "path": "../tree/tsconfig.json" }],
   "isolatedModules": true
 }
