GET /api/bot to get online bots (#580)
* add /api/bot/game/{gameId}/chat

* list online bots API endpoint - for lichess-org/api#131

* remove dead code

* Document /api/bot/online

* Insert /api/bot/online above bot commands

---------

Co-authored-by: Thibault Duplessis <t@lichess.org>

--- a/public/doc/lishogi-api.yaml
+++ b/public/doc/lishogi-api.yaml
@@ -2803,6 +2803,35 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /api/bot/online:
+    get:
+      operationId: apiBotOnline
+      summary: Get online bots
+      tags:
+        - Bot
+      security: []
+      description: Stream the [online bot users](https://lishogi.org/player/bots), as [ndjson](#section/Introduction/Streaming-with-ND-JSON). Throttled to 50 bot users per second.
+      parameters:
+        - in: query
+          name: nb
+          description: How many bot users to fetch
+          schema:
+            type: integer
+            minimum: 1
+            example: 20
+      responses:
+        "200":
+          description: The list of online bot users
+          headers:
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+                default: "'*'"
+          content:
+            application/x-ndjson:
+              schema:
+                $ref: '#/components/schemas/User'
+
   /api/bot/account/upgrade:
     post:
       operationId: botAccountUpgrade
