add ui/board and start moving menu ts/css over

--- a/ui/round/package.json
+++ b/ui/round/package.json
@@ -21,6 +21,7 @@
     "keyboardMove": "workspace:*",
     "voice": "workspace:*",
     "nvui": "workspace:*",
+    "board": "workspace:*",
     "snabbdom": "^3.5.1"
   },
   "scripts": {
