refactor ui/board/menu and add it to ui/puzzle WIP

--- a/ui/puzzle/package.json
+++ b/ui/puzzle/package.json
@@ -22,6 +22,7 @@
     "keyboardMove": "workspace:*",
     "voice": "workspace:*",
     "nvui": "workspace:*",
+    "board": "workspace:*",
     "snabbdom": "^3.5.1",
     "tree": "workspace:*"
   },
