--- a/ui/voice/package.json
+++ b/ui/voice/package.json
@@ -24,13 +24,12 @@
   },
   "scripts": {
     "compile": "tsc",
-    "dev": "tsc",
-    "post-disabled": "cp dist/plugins/voskWorklet.js ../../public/compiled"
+    "dev": "tsc"
   },
   "lichess": {
     "bundles": {
-      "src/plugins/vosk.ts": "voice.vosk",
-      "src/plugins/voiceMove.ts": "voice.move"
+      "src/vosk.ts": "voice.vosk",
+      "src/move/moveCtrl.ts": "voice.move"
     },
     "copy": [
       {
