voice coordinate trainer

--- a/ui/coordinateTrainer/package.json
+++ b/ui/coordinateTrainer/package.json
@@ -17,7 +17,8 @@
     "@types/fnando__sparkline": "^0.3.4",
     "@types/lichess": "workspace:*",
     "common": "workspace:*",
-    "snabbdom": "^3.5.1"
+    "snabbdom": "^3.5.1",
+    "voice": "workspace:*"
   },
   "scripts": {
     "compile": "tsc",
