--- a/ui/coordinateTrainer/tsconfig.json
+++ b/ui/coordinateTrainer/tsconfig.json
@@ -4,6 +4,6 @@
     "types": ["lichess", "web", "cash"],
     "noEmit": true
   },
-  "references": [{ "path": "../common/tsconfig.json" }],
+  "references": [{ "path": "../common/tsconfig.json" }, { "path": "../voice/tsconfig.json" }],
   "isolatedModules": true
 }
