Add scalafmt AvoidInfix rule

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -9,6 +9,7 @@ rewrite.redundantBraces.stringInterpolation = true
 
 rewrite.scala3.convertToNewSyntax = yes
 rewrite.scala3.removeOptionalBraces = yes
+rewrite.rules = [AvoidInfix]
 
 fileOverride {
   "glob:**/build.sbt" {
