Add format job for CI

--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -29,7 +29,7 @@ on:
       - '.sbtopts.default'
 
 jobs:
-  openjdk21:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -49,3 +49,16 @@ jobs:
           name: lila-server
           path: lila-3.0.tar.zst
           compression-level: 0 # already compressed
+
+  format:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 21
+          cache: sbt
+
+      - name: Check Formatting
+        run: sbt check
