Increase sbt heap to avoid OOM exception

--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -27,6 +27,8 @@ on:
       - 'lila'
       - 'conf/application.conf.default'
       - '.sbtopts.default'
+env:
+  SBT_OPTS: '-Xmx2048M'
 
 jobs:
   build:
