--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -52,15 +52,16 @@ jobs:
           path: lila-3.0.tar.zst
           compression-level: 0 # already compressed
 
-  format:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 21
-          cache: sbt
 
-      - name: Check Formatting
-        run: sbt check
+  # format:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: actions/setup-java@v4
+  #       with:
+  #         distribution: temurin
+  #         java-version: 21
+  #         cache: sbt
+  #
+  #     - name: Check Formatting
+  #       run: sbt check
