hide kamon banner on start

--- a/conf/base.conf
+++ b/conf/base.conf
@@ -466,6 +466,7 @@ kamon {
   enabled = false
   environment.service = "lila"
   metric.tick-interval = 60 seconds
+  init.hide-banner = true
   influxdb {
     hostname = ""
     port = 8086
