wtf, builds are 3x slower this branch

--- a/ui/libot/tsconfig.json
+++ b/ui/libot/tsconfig.json
@@ -6,8 +6,7 @@
     "allowUnreachableCode": true,
     "outDir": "dist",
     "rootDir": "src",
-    "composite": true,
-    "isolatedModules": true
+    "composite": true
   },
   "references": [
     { "path": "../chess/tsconfig.json" },
