--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chessground": "^9.0.4",
     "eslint": "^8.57.0",
     "lint-staged": "^15.2.2",
+    "onchange": "^7.1.0",
     "prettier": "3.0.2",
     "typescript": "^5.4.2"
   },
