--- a/ui/localPlay/tsconfig.json
+++ b/ui/localPlay/tsconfig.json
@@ -8,15 +8,12 @@
     "allowUnreachableCode": true
   },
   "references": [
-    { "path": "../ceval/tsconfig.json" },
-    { "path": "../chess/tsconfig.json" },
     { "path": "../common/tsconfig.json" },
+    { "path": "../chess/tsconfig.json" },
     { "path": "../game/tsconfig.json" },
+    { "path": "../ceval/tsconfig.json" },
     { "path": "../libot/tsconfig.json" },
-    { "path": "../puz/tsconfig.json" },
-    { "path": "../nvui/tsconfig.json" },
-    { "path": "../round/tsconfig.json" },
-    { "path": "../tree/tsconfig.json" }
+    { "path": "../round/tsconfig.json" }
   ],
   "isolatedModules": true
 }
