--- a/ui/voice/package.json
+++ b/ui/voice/package.json
@@ -17,7 +17,7 @@
     "@types/audioworklet": "^0.0.36",
     "chess": "workspace:*",
     "common": "workspace:*",
-    "snabbdom": "^3.5.1",
+    "snabbdom": "3.5.1",
     "vosk-browser": "^0.0.8"
   },
   "lichess": {
