--- a/ui/ceval/package.json
+++ b/ui/ceval/package.json
@@ -19,7 +19,7 @@
     "chessops": "^0.14.0",
     "common": "workspace:*",
     "idb-keyval": "^6.2.1",
-    "snabbdom": "^3.5.1",
+    "snabbdom": "3.5.1",
     "stockfish.js": "^10.0.2",
     "stockfish.wasm": "^0.10.0",
     "stockfish-mv.wasm": "^0.6.1",
