--- a/ui/chess/package.json
+++ b/ui/chess/package.json
@@ -25,6 +25,6 @@
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "common": "workspace:*",
-    "snabbdom": "^3.5.1"
+    "snabbdom": "3.5.1"
   }
 }
