--- a/ui/coordinateTrainer/package.json
+++ b/ui/coordinateTrainer/package.json
@@ -13,9 +13,9 @@
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "@fnando/sparkline": "^0.3.10",
-    "@types/fnando__sparkline": "^0.3.4",
+    "@types/fnando__sparkline": "^0.3.7",
     "common": "workspace:*",
-    "snabbdom": "^3.5.1",
+    "snabbdom": "3.5.1",
     "voice": "workspace:*"
   },
   "lichess": {
