--- a/ui/editor/package.json
+++ b/ui/editor/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "chessops": "^0.14.0",
     "common": "workspace:*",
-    "snabbdom": "^3.5.1"
+    "snabbdom": "3.5.1"
   },
   "lichess": {
     "modules": {
