--- a/ui/nvui/package.json
+++ b/ui/nvui/package.json
@@ -25,6 +25,6 @@
   "dependencies": {
     "chess": "workspace:*",
     "chessops": "^0.14.0",
-    "snabbdom": "^3.5.1"
+    "snabbdom": "3.5.1"
   }
 }
