--- a/ui/pagelets/package.json
+++ b/ui/pagelets/package.json
@@ -17,12 +17,12 @@
   },
   "dependencies": {
     "@fnando/sparkline": "^0.3.10",
-    "@toast-ui/editor": "=3.1.7",
-    "@types/debounce-promise": "^3.1.6",
-    "@types/fnando__sparkline": "^0.3.4",
-    "@types/yaireo__tagify": "^4.17.0",
-    "@types/zxcvbn": "^4.4.1",
-    "@yaireo/tagify": "^4.17.6",
+    "@toast-ui/editor": "^3.2.2",
+    "@types/debounce-promise": "^3.1.9",
+    "@types/fnando__sparkline": "^0.3.7",
+    "@types/yaireo__tagify": "^4.18.0",
+    "@types/zxcvbn": "^4.4.4",
+    "@yaireo/tagify": "^4.21.2",
     "chat": "workspace:*",
     "chess": "workspace:*",
     "common": "workspace:*",
