--- a/ui/puz/package.json
+++ b/ui/puz/package.json
@@ -22,6 +22,6 @@
   "dependencies": {
     "chessops": "^0.14.0",
     "common": "workspace:*",
-    "snabbdom": "^3.5.1"
+    "snabbdom": "3.5.1"
   }
 }
