--- a/ui/racer/package.json
+++ b/ui/racer/package.json
@@ -16,7 +16,7 @@
     "chessops": "^0.14.0",
     "common": "workspace:*",
     "puz": "workspace:*",
-    "snabbdom": "^3.5.1"
+    "snabbdom": "3.5.1"
   },
   "lichess": {
     "modules": {
