--- a/ui/round/package.json
+++ b/ui/round/package.json
@@ -21,7 +21,7 @@
     "voice": "workspace:*",
     "nvui": "workspace:*",
     "board": "workspace:*",
-    "snabbdom": "^3.5.1"
+    "snabbdom": "3.5.1"
   },
   "lichess": {
     "modules": {
