--- a/ui/setup/package.json
+++ b/ui/setup/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "common": "workspace:*",
     "libot": "workspace:*",
-    "snabbdom": "^3.5.1"
+    "snabbdom": "3.5.1"
   },
   "lichess": {
     "modules": {
