--- a/ui/swiss/package.json
+++ b/ui/swiss/package.json
@@ -16,7 +16,7 @@
     "common": "workspace:*",
     "flatpickr": "^4.6.13",
     "game": "workspace:*",
-    "snabbdom": "^3.5.1"
+    "snabbdom": "3.5.1"
   },
   "lichess": {
     "modules": {
