--- a/ui/analyse/package.json
+++ b/ui/analyse/package.json
@@ -15,21 +15,21 @@
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "@badrap/result": "^0.2.13",
-    "@types/debounce-promise": "^3.1.6",
-    "@types/yaireo__tagify": "^4.17.3",
-    "@yaireo/tagify": "^4.17.9",
+    "@types/debounce-promise": "^3.1.9",
+    "@types/yaireo__tagify": "4.17.5",
+    "@yaireo/tagify": "4.17.9",
     "ceval": "workspace:*",
     "chart": "workspace:*",
     "chat": "workspace:*",
     "chess": "workspace:*",
-    "chessops": "^0.13.0",
+    "chessops": "^0.14.1",
     "common": "workspace:*",
     "debounce-promise": "^3.1.2",
     "game": "workspace:*",
     "nvui": "workspace:*",
     "prop-types": "^15.8.1",
     "shepherd.js": "^11.2.0",
-    "snabbdom": "^3.5.1",
+    "snabbdom": "3.5.1",
     "tree": "workspace:*"
   },
   "lichess": {
