--- a/ui/learn/package.json
+++ b/ui/learn/package.json
@@ -13,9 +13,9 @@
   "author": "ornicar",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
-    "@types/chess.js": "=0.10.1",
+    "@types/chess.js": "0.10.1",
     "chess.js": "github:ornicar/chess.js#learn",
-    "chessground": "=4.4.2",
+    "chessground": "4.4.2",
     "common": "workspace:*",
     "mithril": "github:ornicar/mithril.js#lila-1"
   },
