--- a/ui/mod/package.json
+++ b/ui/mod/package.json
@@ -7,8 +7,8 @@
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "@types/debounce-promise": "^3.1.6",
-    "@types/yaireo__tagify": "^4.16.0",
-    "@yaireo/tagify": "^4.17.6",
+    "@types/yaireo__tagify": "4.17.5",
+    "@yaireo/tagify": "4.17.9",
     "apexcharts": "^3.36.3",
     "common": "workspace:*",
     "debounce-promise": "^3.1.2",
