--- a/ui/nvui/package.json
+++ b/ui/nvui/package.json
@@ -24,7 +24,7 @@
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "chess": "workspace:*",
-    "chessops": "^0.13.0",
-    "snabbdom": "^3.5.1"
+    "chessops": "^0.14.1",
+    "snabbdom": "3.5.1"
   }
 }
