--- a/ui/opening/package.json
+++ b/ui/opening/package.json
@@ -6,8 +6,8 @@
   "author": "Thibault Duplessis",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
-    "@types/debounce-promise": "^3.1.6",
-    "chart.js": "=4.4.0",
+    "@types/debounce-promise": "^3.1.9",
+    "chart.js": "4.4.0",
     "chartjs-adapter-dayjs-4": "^1.0.4",
     "common": "workspace:*",
     "dayjs": "^1.11.10",
