--- a/ui/palantir/package.json
+++ b/ui/palantir/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@types/webrtc": "^0.0.33",
     "common": "workspace:*",
-    "snabbdom": "^3.5.1"
+    "snabbdom": "3.5.1"
   },
   "lichess": {
     "modules": {
