--- a/ui/tournamentSchedule/package.json
+++ b/ui/tournamentSchedule/package.json
@@ -15,7 +15,7 @@
     "@types/dragscroll": "0.0.0",
     "common": "workspace:*",
     "dragscroll": "^0.0.8",
-    "snabbdom": "^3.5.1"
+    "snabbdom": "3.5.1"
   },
   "lichess": {
     "modules": {
