--- a/ui/voice/package.json
+++ b/ui/voice/package.json
@@ -13,11 +13,10 @@
   "author": "T-Bone Duplexus",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
-    "@jest/globals": "^29.3.1",
-    "@types/audioworklet": "^0.0.36",
+    "@types/audioworklet": "^0.0.54",
     "chess": "workspace:*",
     "common": "workspace:*",
-    "snabbdom": "^3.5.1",
+    "snabbdom": "3.5.1",
     "vosk-browser": "^0.0.8"
   },
   "lichess": {
