--- a/ui/site/package.json
+++ b/ui/site/package.json
@@ -21,7 +21,8 @@
         "src/tvEmbed.ts": "tvEmbed",
         "src/puzzleEmbed.ts": "puzzle.embed",
         "src/lpvEmbed.ts": "lpv.embed",
-        "src/devMode.ts": "devMode"
+        "src/devMode.ts": "devMode",
+        "src/eventCountdown.ts": "event.countdown"
       }
     },
     "copy": [
