--- a/ui/opening/package.json
+++ b/ui/opening/package.json
@@ -12,7 +12,7 @@
     "common": "workspace:*",
     "dayjs": "^1.11.10",
     "debounce-promise": "^3.1.2",
-    "lichess-pgn-viewer": "../../../pgn-viewer"
+    "lichess-pgn-viewer": "^2.1.0"
   },
   "lichess": {
     "modules": {
