--- a/ui/pagelets/package.json
+++ b/ui/pagelets/package.json
@@ -32,7 +32,7 @@
     "debounce-promise": "^3.1.2",
     "emoji-mart": "^5.5.2",
     "flatpickr": "^4.6.13",
-    "lichess-pgn-viewer": "../../../pgn-viewer",
+    "lichess-pgn-viewer": "^2.1.0",
     "prop-types": "^15.8.1",
     "tablesort": "^5.3.0",
     "zxcvbn": "^4.4.2"
